--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@heroicons/react": "2.0.13",
     "@iconscout/react-unicons": "1.1.6",
+    "@react-icons/all-files": "4.1.0",
     "@reduxjs/toolkit": "1.8.5",
+    "axios": "1.1.3",
     "bootstrap": "5.2.0",
     "bootstrap-social": "5.1.1",
     "emailjs-com": "3.2.0",
@@ -15,6 +18,8 @@
     "mdb-react-ui-kit": "4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.34.2",
+    "react-icons": "4.6.0",
     "react-redux": "8.0.2",
     "react-scripts": "4.0.0",
     "react-scroll": "1.8.7",
@@ -28,8 +33,8 @@
     "typescript": "4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
