--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@heroicons/react": "2.0.13",
     "@iconscout/react-unicons": "1.1.6",
     "@react-icons/all-files": "4.1.0",
